Fix font color, overflow on chat container and button color for connect

--- a/assets/css/subway.css
+++ b/assets/css/subway.css
@@ -222,6 +222,7 @@ html { overflow: hidden; }
   top: 34px;
   bottom: 57px;
   overflow-y: auto;
+  overflow-x: hidden;
   background: whiteSmoke;
   border-right: 1px solid #DDDDDD
 }
